--- a/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
+++ b/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
@@ -41,7 +41,8 @@
         <span class="options-button possible-button" *ngIf="pipelineElement.type!='action'" style="z-index:10">
             <button mat-button mat-icon-button matTooltip="Compatible Elements" [matTooltipPosition]="'below'"
                     [disabled]="!possibleElements || possibleElements.length == 0 || !isConfigured()"
-                    (click)="openPossibleElementsDialog()">
+                    (click)="openPossibleElementsDialog()"
+                    [attr.data-cy]="'sp-possible-elements-' + pipelineElement.payload.name.toLowerCase().replaceAll(' ', '_')"_>
                 <i class="material-icons">account_tree</i>
         </button>
         </span>
