--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
@@ -33,7 +33,10 @@
                 <form [formGroup]="submitPipelineForm">
                 <div fxFlex="100" fxLayout="column" *ngIf="!currentModifiedPipelineId || updateMode=='clone'">
                     <mat-form-field fxFlex><mat-label>Pipeline Name</mat-label>
-                        <input [formControlName]="'pipelineName'" matInput name="pipelineName"/>
+                        <input
+                                [formControlName]="'pipelineName'"
+                                data-cy="sp-editor-pipeline-name"
+                                matInput name="pipelineName"/>
 <!--                        <span ng-show="submitPipelineForm.pipelineName.$touched && submitPipelineForm.pipelineName.$error.required">Please provide a pipeline name.</span>-->
 <!--                        <span ng-show="submitPipelineForm.pipelineName.$error.maxlength">Please provide a shorter pipeline name.</span>-->
                     </mat-form-field>
@@ -43,7 +46,10 @@
                     </mat-form-field>
                 </div>
                 </form>
-                <mat-checkbox (click)="triggerTutorial()" color="primary" [(ngModel)]="startPipelineAfterStorage">
+                <mat-checkbox color="primary"
+                              (click)="triggerTutorial()"
+                              [(ngModel)]="startPipelineAfterStorage"
+                              data-cy="sp-editor-checkbox-start-immediately">
                     Start pipeline immediately
                 </mat-checkbox>
             </div>
@@ -67,7 +73,8 @@
         <button [disabled]="!submitPipelineForm.valid || saving || saved" mat-button mat-raised-button color="primary" (click)="savePipeline(false)" style="margin-right:10px;">
             Save
         </button>
-        <button [disabled]="!submitPipelineForm.valid || saving || saved" mat-button mat-raised-button color="primary" (click)="savePipeline(true)" style="margin-right:10px;">
+        <button [disabled]="!submitPipelineForm.valid || saving || saved" mat-button mat-raised-button color="primary" (click)="savePipeline(true)" style="margin-right:10px;"
+                data-cy="sp-editor-save">
             Save and go to pipeline view
         </button>
         <button mat-button mat-raised-button class="mat-basic" (click)="hide()">
