--- a/ui/src/app/pipelines/dialog/delete-pipeline/delete-pipeline-dialog.component.html
+++ b/ui/src/app/pipelines/dialog/delete-pipeline/delete-pipeline-dialog.component.html
@@ -31,7 +31,9 @@
                     pipeline
                 </button>
                 <button mat-button mat-raised-button color="primary" *ngIf="pipeline.running"
-                        (click)="stopAndDeletePipeline()">Stop and
+                        (click)="stopAndDeletePipeline()"
+                        data-cy="stop-and-delete">
+                    Stop and
                     delete pipeline
                 </button>
             </div>
