--- a/ui/src/app/pipelines/dialog/delete-pipeline/delete-pipeline-dialog.component.html
+++ b/ui/src/app/pipelines/dialog/delete-pipeline/delete-pipeline-dialog.component.html
@@ -32,7 +32,7 @@
                 </button>
                 <button mat-button mat-raised-button color="primary" *ngIf="pipeline.running"
                         (click)="stopAndDeletePipeline()"
-                        data-cy="stop-and-delete">
+                        data-cy="sp-pipeline-stop-and-delete">
                     Stop and
                     delete pipeline
                 </button>
