--- a/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
+++ b/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
@@ -20,7 +20,9 @@
      style="padding:5px;margin-bottom:10px;background:{{getSelectedBackground()}}" [ngStyle]="item.editable ? {opacity: 1} : {opacity: 0.5}">
     <div fxFlex fxLayout="row" style="width:100%;">
         <div style="margin-right:10px;margin-left:10px;margin-top:10px;">
-            <div class="draggable-icon {{item.type}}">{{iconText(item.name)}}</div>
+            <div *ngIf="!item.includesIcon || iconError" class="draggable-icon {{item.type}}">{{iconText(item.name)}}</div>
+            <div *ngIf="item.includesIcon && iconReady" class="draggable-icon {{item.type}}">
+                <img class="icon" [src]="image"></div>
         </div>
         <div fxFlex fxLayout="column">
             <div fxFlex fxLayoutAlign="end start">
