[STREAMPIPES-380] Fix add pipeline element for data sets

--- a/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
+++ b/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div *ngIf="isSetAdapter">
-                    <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+                    <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row" data-cy="sp-connect-adapter-set-success">
                         <i class="material-icons">done</i>
                         <span>&nbsp;Your new data set is now available in the pipeline editor.</span>
                     </div>
