--- a/ui/src/app/core-ui/static-properties/static-mapping-unary/static-mapping-unary.component.html
+++ b/ui/src/app/core-ui/static-properties/static-mapping-unary/static-mapping-unary.component.html
@@ -20,7 +20,7 @@
     <div fxFlex="100" fxLayout="row">
             <mat-form-field class="example-full-width">
                 <!--<mat-form-field class="example-full-width">-->
-                <mat-select formControlName="{{fieldName}}" [placeholder]="staticProperty.label">
+                <mat-select formControlName="{{fieldName}}" [placeholder]="staticProperty.label" [attr.data-cy]="fieldName">
                     <mat-option *ngFor="let property of availableProperties | displayRecommendedPipe: staticProperty.propertyScope: displayRecommended" [value]="property.propertySelector">
                         {{property.runtimeName}}
                     </mat-option>
