[STREAMPIPES-380] Ensure that event schema contains a timestamp

--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -64,7 +64,12 @@
 <div fxLayoutAlign="end">
     <button class="mat-basic" mat-raised-button (click)="removeSelection()">Cancel</button>
     <button class="mat-basic stepper-button" mat-raised-button (click)="goBack()">Back</button>
-    <button class="stepper-button" id="event-schema-next-button"
-            (click)="clickNext()" data-cy="sp-event-schema-next-button" color="primary" mat-raised-button>Next
+    <button class="stepper-button"
+            id="event-schema-next-button"
+            data-cy="sp-event-schema-next-button"
+            color="primary" mat-raised-button
+            (click)="clickNext()"
+            [disabled]="!validEventSchema">
+        Next
     </button>
 </div>
