--- a/ui/src/app/configuration/node-configuration/node-configuration.component.scss
+++ b/ui/src/app/configuration/node-configuration/node-configuration.component.scss
@@ -91,6 +91,17 @@ li {
     margin-right: 2px;
 }
 
+.span-node-inactive-days{
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+    background: #f1c40f;
+    border: 1px solid #f1c40f;
+    padding: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
 .div-sa-tag{
     display: inline-block;
     margin-bottom: 10px;
