--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
@@ -144,7 +144,7 @@
                                                      [expanded]="panelOpenState">
                                     <mat-expansion-panel-header>
                                         <mat-panel-description>
-                                            Modify deployment targets: <b>{{selectedPipelineExecutionPolicy}}</b>
+                                            Select node deployment targets: <b>{{selectedPipelineExecutionPolicy}}</b>
                                             <mat-icon>storage</mat-icon>
                                         </mat-panel-description>
                                     </mat-expansion-panel-header>
