[STREAMPIPES-380] Add output strategy to tests and two new pe test cases

--- a/ui/src/app/editor/components/output-strategy/property-selection/property-selection.component.html
+++ b/ui/src/app/editor/components/output-strategy/property-selection/property-selection.component.html
@@ -20,7 +20,8 @@
     <div fxLayout="row">
         <mat-checkbox [checked]="exists(eventProperty.runtimeId)"
                       (change)="toggle(eventProperty.runtimeId)"
-                      style="margin-right: 10px;" [disabled]="restrictedEditMode">
+                      style="margin-right: 10px;" [disabled]="restrictedEditMode"
+                      [attr.data-cy]="eventProperty.runtimeName">
         </mat-checkbox>
         <div>
             <div *ngIf="eventProperty.label"><b>{{eventProperty.label}}</b><br/>
