[hotfix] Increase space between buttons in data explorer overview

--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -19,7 +19,7 @@
 
 <div fxFlex="100" fxLayout="column" class="m-20">
     <div fxLayout="row wrap">
-        <button mat-button mat-raised-button color="primary" (click)="openNewDataViewDialog()">
+        <button mat-button mat-raised-button color="primary" (click)="openNewDataViewDialog()" class="mr-10">
             New Data View
         </button>
         <button mat-button mat-raised-button color="primary" (click)="openEditLabelView()">
